--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ install:
 - pip install pelican ghp-import
 script:
 - make publish github
+env:
+  global:
+    secure: cc8bf375bb9abc063c82a6d1e030479539d3469f
